# realtime-website

./: AGENTS.md  README.md  pyproject.toml  teambot.json
.agent-tracking/changes/: 20260226-azure-openai-realtime-chatbot-changes.md
.agent-tracking/details/: 20260226-azure-openai-realtime-chatbot-details.md
.agent-tracking/feature-spec-sessions/: azure-openai-gpt-realtime-chatbot.state.json
.agent-tracking/plan-reviews/: 20260226-azure-openai-realtime-chatbot-plan-review.md
.agent-tracking/plans/: 20260226-azure-openai-realtime-chatbot-plan.instructions.md
.agent-tracking/research/: 20260226-azure-openai-gpt-chatbot-research.md
.agent-tracking/research/subagent/: azure-openai-api-research.md  msal-react-research.md  web-audio-api-research.md
.agent-tracking/spec-reviews/: 20260226-azure-openai-gpt-realtime-chatbot-review.md  20260226-azure-openai-realtime-chatbot-review.md
.agent-tracking/test-strategies/: 20260226-azure-openai-realtime-chatbot-test-strategy.md
.devcontainer/: devcontainer.json
.teambot/: model_cache.json
.teambot/azure-openai-gpt/: orchestration_state.json
docs/: azure-ad-setup.md  azure-openai-realtime-chatbot.md  voice-communication-architecture.md
scripts/: setup-azure-ad.sh
src/: server.py
tests/: __init__.py  test_acceptance_validation.py
web/: .env.example  .gitignore  README.md  VERIFICATION_REPORT.md  jest.config.js  jest.setup.js  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/e2e/: app.spec.ts
web/playwright-report/: index.html
web/src/: App.css  App.tsx  main.tsx
(+36 files in other folders)
